# aisalon-platform

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  dev.sh
backend/: Dockerfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 01fc13df7234_add_substack_url_to_articles.py  1206ff71cd86_add_hosting_interest.py  273ca096786e_drop_team_members_and_backfill_users.py  302267ee9598_add_invites_table.py  37a850afeda2_add_step_to_jobs.py  3c53e190a0b0_add_login_tracking.py  43f019619e97_add_user_profile_and_chapter_status.py  5132f69258e4_add_professional_links_and_chapter_.py  7003801ac13b_add_hosting_interest_fields.py  73ee5360a8a5_drop_topic_display_order_column.py  ebaef3f8beeb_initial.py  (+17 more)
backend/app/: main.py
backend/docs/: substack-articles.md
backend/scripts/: backfill_transcripts.py  fresh_deploy_backfill.py  generate_meta_from_substack.py  seed_admin.py  seed_chapters.py  seed_topics.py
backend/tests/: conftest.py  test_admin_chapters.py  test_admin_invites.py  test_admin_people.py  test_admin_team.py  test_api_keys.py  test_articles.py  test_auth.py  test_chapters.py  test_community_stats.py  test_community_upload.py  test_feature_flags.py  test_graph.py  test_graph_service.py  test_jobs.py  test_processing_config.py  test_processor_keys.py  test_processor_transcript.py  test_profile.py  test_profile_photo.py  test_public_articles.py  test_publishing.py  test_seed_topics.py  test_seed_volunteer_roles.py  test_social.py  test_system_settings_resolution.py  test_team.py  test_topics.py  test_users.py  test_volunteer.py
(+180 files in other folders)
